package com.yushixin.structure.adapter.class_adapter;

/**
 * 220V电压
 */
public class Voltage220V {

    /**
     * 输出220V电压
     */
    public int output220V() {
        System.out.println("输出220V电压");
        return 220;
    }
}
